# multimodal-tcmr-steroid-response

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
data/: README.md
src/: baseline_severity.py  config.py  cross_validation.py  evaluation.py  figures.py  oof.py  pooling_ablation.py  robustness.py  run_analysis.py  stats.py  supplementary.py
tests/: test_baseline_severity.py  test_config.py  test_cross_validation.py  test_figures.py  test_oof.py  test_pooling_ablation.py  test_stats.py  test_supplementary.py
